chore: kotlinx-serialization compat changes